src/test/ui/pattern/usefulness/slice-pattern-exhaustiveness.stderr
error[E0004]: non-exhaustive patterns: `[false, true]` not covered
  --> $DIR/slice-pattern-exhaustiveness.rs:23:11
   |
LL |     match s {
   |           ^ pattern `[false, true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
